moved widget header out and fixed spacing

--- a/packages/itwin/grouping-mapping-widget/src/widget/components/PropertyMenu.scss
+++ b/packages/itwin/grouping-mapping-widget/src/widget/components/PropertyMenu.scss
@@ -18,7 +18,7 @@
     display: flex;
     flex-direction: column;
     overflow: auto;
-    gap: $iui-baseline;
+    gap: $iui-baseline * 2;
     .gmw-property-menu-toolbar {
       display: flex;
       justify-content: space-between;
